--- a/style.css
+++ b/style.css
@@ -14,6 +14,20 @@ h1 {
   margin-top: 5px;
 }
 
+li {
+  float: left;
+}
+
+a {
+  display: block;
+  padding: 8px;
+  background-color: #dddddd;
+}
+
+ul {
+  background-color: #dddddd;
+}
+
 /* Applies to all elements with <... class="someclass"> specified. */
 .someclass { color: red; }
 
