--- a/style.css
+++ b/style.css
@@ -14,18 +14,29 @@ h1 {
   margin-top: 5px;
 }
 
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
 li {
   float: left;
 }
 
-a {
+li a {
   display: block;
-  padding: 8px;
-  background-color: #dddddd;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
 }
 
-ul {
-  background-color: #dddddd;
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+  background-color: #111;
 }
 
 /* Applies to all elements with <... class="someclass"> specified. */
