--- a/style.css
+++ b/style.css
@@ -14,6 +14,12 @@ h1 {
   margin-top: 5px;
 }
 
+h2 {
+  font-size: 22px;
+  font-weight: normal;
+  margin-top: 5px;
+}
+
 ul {
   list-style-type: none;
   margin: 0;
