--- a/style.css
+++ b/style.css
@@ -3,14 +3,14 @@ selectors). */
 body {
   margin: 25px;
   background-color: rgb(240,240,240);
-  font-family: arial, sans-serif;
+  font-family: verdana, sans-serif;
   font-size: 18px;
 }
 
 /* Applies to all <h1>...</h1> elements. */
 h1 {
   font-size: 35px;
-  font-weight: normal;
+  font-weight: bold;
   margin-top: 5px;
 }
 
