--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ selectors). */
 body {
   margin: 25px;
   background-color: rgb(240,240,240);
-  font-family: verdana, sans-serif;
+  font-family: helvetica, sans-serif;
   font-size: 18px;
 }
 
