--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ h2 {
 
 ul {
   list-style-type: none;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   overflow: hidden;
   background-color: #333;
