--- a/style.css
+++ b/style.css
@@ -16,9 +16,13 @@ h1 {
 }
 
 h2 {
-  font-size: 22px;
+  font-size: 35px;
   font-weight: normal;
-  margin-top: 5px;
+}
+
+h3 {
+  font-size: 22px;
+  font-weight: bold;
 }
 
 ul {
