--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 selectors). */
 body {
   margin: 25px;
-  background-color: rgb(240,240,240);
+  background-color: lightgray;
   font-family: helvetica, sans-serif;
   font-size: 18px;
 }
@@ -54,8 +54,10 @@ li a:hover {
 a { text-decoration: none; }
 
 div.wrap {
-    max-width:960px;
-    margin:0 auto;
+  max-width:960px;
+  margin:0 auto;
+  padding:5px;
+  background-color:rgb(240,240,240)
 }
 
 /* Applies to all elements with <... class="someclass"> specified. */
